# Algerian-Forest-Fire-Prediction

./: .dvcignore  .env  .env.example  .gitignore  README.md  clear_experiments.sh  dvc.yaml  h origin :  params.yaml  path.py  pyproject.toml  requirements.txt  service-account-token.json.gpg  setup.cfg  setup.py  shell.sh  structure.py  template.py  tox.ini
.dvc/: .gitignore  config
.github/workflows/: ci.yaml  cicd.yaml  cicd.yml  publish.yaml  publish.yml
Notebooks/: Data_Exploration.ipynb  EDA_and_Feature_Engineering.ipynb
artifacts/: classification_report.txt  cm_data.csv  metrics.json  pr_data.csv  roc_data.csv  selected_features.json
assets/: .gitignore  KaggleDownloadData.md  kaggle.json.dvc  pyproject.tml
docs/: .gitignore  Methodology.md  dataset-description.md
dvc_plots/: index.html
dvclive/: metrics.json
dvclive/plots/custom/: ROC Curve.json
dvclive/plots/metrics/: accuracy.tsv  auc.tsv  f1_score.tsv  precision.tsv  recall.tsv
dvclive/plots/sklearn/: confusion_matrix.json
src/: __init__.py  exception.py  logger.py  utils.py
src/components/: __init__.py  data_factory.py  data_ingestion.py  model_training.py  model_traning.py
src/pipeline/: __init__.py  train_pipeline.py  train_pipline.py
tests/: TestScenarios.md
tests/integration/: integration_test.py
tests/unit/: unit_test.py
