[tool.poetry.dependencies]
python = "^3.9"  
pandas = "^1.0.0,<2.0.0"  
numpy = "^1.16.0,<2.0.0" 
scikit-learn = "^1.0.0,<1.6.0" 
xgboost = "^1.4.0,<2.1.0"
statsmodels = "^0.11.0,<0.15.0"
matplotlib = "^3.0.0,<3.7.0"
seaborn = "^0.9.0,<0.13.0"
category_encoders = "^2.4.0"
logging = "^0.4.9.6"
dvc = ">=1.0.0,<3.1.0" 
dvc-gdrive = ">=1.0.0,<3.1.0",
requests = "^2.20.0,<2.32.0" 
pickles = "^0.1.0,<0.2.0" 
joblib = "^1.0.0,<1.3.0" 
argparse = "^1.1.0,<1.5.0"
simple-namespace = "^0.1.0,<1.1.0"
colorama = "^0.3.9,<0.5.0"
PyYAML = "^5.3.0,<6.1.0" 
kaggle = "^1.5.10,<1.7.0"
python-dotenv = "^0.14.0,<0.15.0"
setuptools = "^57.0.0,<71.0.0" 

[tool.poetry.dev-dependencies]
pytest = "^6.0.0,<7.2.0"
pytest-cov = "^4.1.0"
tox = "^3.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.tox]
envlist = py38, py39
skipsdist = true

[testenv]
deps = -rrequirements.txt 
commands = pytest